--- a/gui/templates/registration/login.html
+++ b/gui/templates/registration/login.html
@@ -48,8 +48,7 @@ require(["dojo/_base/fx", "dojo/dom", "dojo/fx/easing", "dojo/_base/html", "dojo
 {% if user.is_authenticated %}
 <p>{% blocktrans with user.username as username %}Welcome, {{ username }}. Thanks for logging in.{% endblocktrans %}</p>
 {% else %}
-<div id="login" data-dojo-type="dijit.Dialog" data-dojo-props="title: '{% blocktrans with sw_login_version=sw_login_version sw_name=sw_name %}Welcome to TaBangNAS&reg; {{ sw_login_version }}{% endblocktrans %}'" style="max-width: 400px;">
-<!-- <div id="login" data-dojo-type="dijit.Dialog" data-dojo-props="title: '{% blocktrans with sw_login_version=sw_login_version sw_name=sw_name %}Welcome to {{ sw_name }}&reg; {{ sw_login_version }}{% endblocktrans %}'" style="max-width: 400px;"> -->
+<div id="login" data-dojo-type="dijit.Dialog" data-dojo-props="title: '{% blocktrans with sw_login_version=sw_login_version sw_name=sw_name %}Welcome to {{ sw_name }}&reg; {{ sw_login_version }}{% endblocktrans %}'" style="max-width: 400px;">
 <script type="dojo/event" data-dojo-event="onFocus">
   require(["dojo/dom"], function(dom) {
     dom.byId("id_password").focus();
