--- a/gui/freeadmin/static/css/layout.css
+++ b/gui/freeadmin/static/css/layout.css
@@ -15,11 +15,11 @@ body, html { overflow:hidden; width:100%; height:100%; margin:0; padding:0; }
 
 #page-header {
     height:72px;
-    background: #464C53 url("../images/headerbg.png") repeat-x;
+    background: #195EEF url("../images/headerbg.png") repeat-x;
 }
 #footer {
     height:45px;
-    background: #464C53 url("../images/footerbg.png") repeat-x;
+    background: #195EEF url("../images/footerbg.png") repeat-x;
 }
 
 #fntree, #menupane {
